--- a/about.html
+++ b/about.html
@@ -26,10 +26,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="file:///C:/Users/HP/Webtest/index.html#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="file:///C:/Users/HP/Documents/GitHub/webProject/index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="file:///C:/Users/HP/Webtest/product.html#">My Product</a>
+                    <a class="nav-link" href="file:///C:/Users/HP/Documents/GitHub/webProject/product.html">My Product</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" href="#">About</a>
