--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="file:///C:/Users/HP/Webtest/product.html#">My Product</a>
+          <a class="nav-link" href="file:///C:/Users/HP/Documents/GitHub/webProject/product.html">My Product</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="file:///C:/Users/HP/Webtest/about.html">About</a>
+          <a class="nav-link" href="file:///C:/Users/HP/Documents/GitHub/webProject/about.html">About</a>
         </li>
       </ul>
     </div>
